# PPL_2.1

./: .gitignore  README.md  pyproject.toml
sources/: tasks.jsonl
src/: cli.py  constants.py  logging_config.py  main.py  utils.py
src/contracts/: task_source.py
src/inbox/: core.py
src/models/: descriptors.py  exceptions.py  task.py  task_queue.py  task_status.py
src/sources/: __init__.py  generator.py  json.py  repository.py  stdin.py
tests/: test_cli.py  test_generator.py  test_inbox.py  test_json.py  test_stdin.py  test_task.py  test_task_queue.py
